 2015-07-05 22:03  hvlad 
   M src/jrd/validation.cpp
Fixed bug CORE-4855 : Online validation during DML activity in other connection leads to message "Error while trying to read from file" and "page in use during flush (210), file: cch.cpp line: 2672"

 2015-07-05 11:40  alexpeshkoff 
   M src/common/StatusHolder.h
   M src/common/classes/GetPlugins.h
   M src/jrd/exe.cpp
   M src/jrd/status.h
   M src/jrd/svc.cpp
Fixed CORE-4861: Segfault when working with saved exception in request

 2015-07-05 10:36  hvlad 
   M src/jrd/validation.cpp
Fixed bug CORE-4860 : Online validation fails on WINDOWS if `dbname` argument contains forward slash ('/') and concurrent attachment which also uses '/' exists.

 2015-07-05 08:47  hvlad 
   M src/common/isc_sync.cpp
Fixed bug CORE-4859 : FB 3 embedded not working without folder C:\ProgramData\firebird

 2015-07-03 16:18  asfernandes 
   M src/dsql/DdlNodes.epp
Fixed CORE-4846 - Altering a trigger indicating other table than the original does not reflect the change.

 2015-07-03 11:48  dimitr 
   M src/misc/writeBuildNum.sh
Updated version info.

 2015-07-03 08:05  hvlad 
   M src/jrd/vio.cpp
Wrong check, thanks to Claudio

 2015-07-03 06:45  paulbeach 
   M builds/posix/Makefile.in.extern.editline
Typo, adjust AR redefinition in extern.editline

 2015-07-02 15:44  alexpeshkoff 
   M src/remote/client/interface.cpp
   M src/remote/remote.cpp
   M src/remote/remote.h
Fixed CORE-4854: Client library incorrectly handles non-UTF8 representation of international characters in SPB

 2015-07-02 15:35  alexpeshkoff 
   M src/auth/SecureRemotePassword/srp.cpp
Add more debugging info

 2015-07-02 15:34  alexpeshkoff 
   M src/yvalve/why.cpp
Totally misc

 2015-07-02 11:28  paulbeach 
   M builds/posix/Makefile.in.extern.editline
Fix problem where ar flags are duplicated in editline make on HPUX ia64

 2015-07-02 08:47  paulbeach 
   M builds/install/arch-specific/darwin/launchdss.org.firebird.gds.plist