@@ -1,3 +1,8 @@
+ 2015-07-06 15:10  hvlad 
+   M builds/win32/make_all.bat
+   M builds/win32/set_build_target.bat
+A bit more support for VC12 - make_all now copies CRT dll's into output folder
+
  2015-07-05 22:03  hvlad 
    M src/jrd/validation.cpp
 Fixed bug CORE-4855 : Online validation during DML activity in other connection leads to message "Error while trying to read from file" and "page in use during flush (210), file: cch.cpp line: 2672"
